# yapp

./: .clang-format  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GNUmakefile  Install  LICENSE  MANIFEST.source  Makefile  Makefile.in  README  acconfig.h  aclocal.m4  arch.c  arch.cc  arch.h  bbs  bbs_src.tar  cfcreate.sh  cfdelete.sh  change.c  change.cc  change.h  conf.c  conf.cc  conf.h  config.cache  config.h  config.h.bot  config.h.in  config.status  configure  configure.in  database.h  dates.c  dates.cc  dates.h  driver.c  (+102 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  dependency-review.yml  scorecard.yml  validate-yaml.yml
docs/: Makefile  admin.tex  webuser.man  yapp.man
help/: Index  printman
help/edb/: Default  Index  continue  no  yes
help/joq/: Default  Index  join  observe  quit
help/misc/: Index  argset  cflist  chfn  date  define  echo  eval  foreach  help  if  load  mail  newuser  passwd  quit  save  source  test  umask  wwwparsepost
help/ok/: Commands  Default  Index  abort  browse  cd  cfcreate  cfdelete  check  enter  find  fixseen  fixto  forget  freeze  join  kill  leave  linkfrom  list  next  participants  read  remember  resign  respond  retire  retitle  thaw  unretire
help/rfp/: Default  Index  censor  edit  find  forget  freeze  header  kill  new  only  pass  postpone  range  remember  reply  respond  retire  retitle  scribble  stop  text  thaw  uncensor  unretire
help/text/: Default  Index  clear  done  edit  print  quit  read  write
help/topics/: Index  Intro  confcond  confsep  dates  datesep  fairwitness  filesep  flags  itemcond  seps  (+8 more)
license/: registered
man/: bbs.1  cfcreate.1  cfdelete.1  webuser.1  yapp.1
www/: html_check  html_pager  receive_post
(+89 files in other folders)
